css/style.css
/* RESET CSS */
*{padding: 0;
  margin: 0;
  box-sizing: border-box;
}
/* CLASSI UTILITY */
.clicked{
  background-color: #fc6f25;
  border:2px solid black;
}
.brown{
  background-color:#ffba25;
}
.pinkred{background-color: #cd2c4f;
}
.lightbrown{
  background-color:#fff3de;
}
.p50lr{
  padding:0 50px;
}
.clearfix::after{
  display:table;
  content:"";
  clear:both;
}
.flex{
  display:flex;
}
.fl{
  float:left;
}
/* LAYOUT */
.wrapper{
  width:100vw;
  height:100vh;
  max-width:100;
}
.main{width:calc(100% - 50px);
}
header{
  height:150px;
  line-height:150px;
}
.content{
  height:calc(100vh - 250px);
  padding-bottom:200px;
  padding-top:50px;
}

.logo{
  background-image: url('../img/burger-top.png');
  background-size: contain;
  position:fixed;
  right:10px;
  top:-80px;
  width:300px;
  height:300px;
  border-radius: 50%;
}
#burger-name{
  border:none;
  font-size: 26px;
  margin-bottom: 40px;
}
/* INGREDIENTS */

.content p{
  font-size: 24px;
  margin-bottom: 10px;
}
label img{
  width:50px;
  height:auto;
}
.ingredient-container{
  flex-direction: column;
  flex-wrap: wrap;
  height:250px;
}
label.flex{
  align-items:center;
  margin:10px 0;
}
.ingredient-container span{
  margin-left: 20px;
}
.ingredient-container img{
  border-radius: 50%;
}

label.flex {
  position:relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

label.flex input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  left:120px;
  height: 25px;
  width: 25px;
  border-radius:3px;
}
/* On mouse-over, add effect */
/* label.flex:hover input ~ .checkmark {
} */

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}
/* Show the checkmark when checked */
.ingredient-container .flex input:checked ~ .checkmark:after {
  display: block;
}
/* Style the checkmark/indicator */
.ingredient-container .flex .checkmark:after {
  left: 6px;
  width: 12px;
  height: 25px;
  bottom:4px;
  border: solid #000;
  border-width: 0 5px 5px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}
.ingredient{
  width:30px;
}
label.flex:after{
  position:relative;
  content:'add';
  color: red;
  left:100px;
}
.sconto-coupon{
  justify-content:start;
  align-items: center;
}
.sconto-coupon input{
  margin-left:10px;
  border:none;
  width:80%;
  height:30px;
  border-radius:10px;
}
.calculate{
  text-align: center;
}
#btn{
  margin-top: 40px;
  width:150px;
  height:50px;
  font-weight:600;
  font-size: 18px;
  border:none;
  border-radius: 5px;
}
.sidebar{
  width:50px;
  height:100vh;
}
footer{
  height:100px;
  line-height: 100px;
  color:#fff;
  justify-content:space-between;
}
#output{
  font-size:30px;
}

